# verax

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug.yml  build.yml  enhancement.yml
.github/workflows/: build_and_test.yml  docker-build.yml  test.yml
CMake/resolve_dependency_modules/: antlr4-runtime.cmake  gtest.cmake
axiom/logical_plan/: Expr.cpp  Expr.h  ExprApi.h  ExprPrinter.cpp  LogicalPlanNode.h  NameMappings.cpp  NameMappings.h  PlanBuilder.cpp  PlanBuilder.h  PlanPrinter.cpp
axiom/logical_plan/tests/: CMakeLists.txt  NameMappingsTest.cpp  PlanPrinterTest.cpp
axiom/optimizer/: CMakeLists.txt  LogicalPlanToGraph.cpp  PlanUtils.cpp  PlanUtils.h  ToGraph.cpp  ToVelox.cpp
axiom/optimizer/connectors/tests/: TestConnector.cpp
axiom/optimizer/connectors/tpch/: TpchConnectorMetadata.cpp
axiom/optimizer/tests/: CMakeLists.txt  DuckParser.cpp  DuckParser.h  HiveQueriesTestBase.cpp  HiveQueriesTestBase.h  LogicalPlanMatcher.cpp  PlanTest.cpp  PrestoParser.cpp  PrestoParser.h  PrestoParserTest.cpp  QuerySqlParser.cpp  SqlStatement.h  TpchPlanTest.cpp
axiom/optimizer/tests/tpch.queries/: q14.sql  q8.sql
axiom/sql/presto/: .gitignore  CMakeLists.txt  ParserHelper.h  PrestoSqlBaseListener.cpp  PrestoSqlBaseListener.h  PrestoSqlBaseVisitor.cpp  PrestoSqlBaseVisitor.h  PrestoSqlLexer.cpp  PrestoSqlLexer.h  PrestoSqlListener.cpp  PrestoSqlListener.h  PrestoSqlParser.cpp  PrestoSqlParser.h  PrestoSqlVisitor.cpp  PrestoSqlVisitor.h  README.md
axiom/sql/presto/ast/: AstBuilder.cpp  AstBuilder.h  AstExpressions.h  AstFunctions.h  AstLiterals.h  AstNode.h  AstNodesAll.cpp  AstNodesAll.h  AstPrinter.cpp  AstPrinter.h  AstRelations.h  AstStatements.h  AstSupport.h  AstVisitor.h  CMakeLists.txt  UpperCaseInputStream.h
axiom/sql/presto/example/: CMakeLists.txt  ParserExample.cpp
axiom/sql/presto/grammar/: CMakeLists.txt  PrestoSql.g4  PrestoSqlBaseListener.cpp  PrestoSqlBaseListener.h  PrestoSqlBaseVisitor.cpp  PrestoSqlBaseVisitor.h  PrestoSqlLexer.cpp  PrestoSqlLexer.h  PrestoSqlListener.cpp  PrestoSqlListener.h  PrestoSqlParser.cpp  PrestoSqlParser.h  PrestoSqlVisitor.cpp  PrestoSqlVisitor.h  README.md  add_license_headers.py
axiom/sql/presto/grammar/tests/: CMakeLists.txt  GrammarTest.cpp
axiom/sql/presto/tests/: CMakeLists.txt  GrammarTest.cpp  UpperCasedInput.h
docker/: centos9-antlr.dockerfile
scripts/: docker-build.sh
